# moneyclaw-py

./: .env.example  .gitignore  IMPLEMENTATION_CHECKLIST_STRATEGY_INTELLIGENCE.md  README.md  RUNBOOK.md  STRATEGY-REVIEW-PLAN.md  cleanup_test_position.py  live_order_test.py  llm_check.py  preflight.py  pyproject.toml
.codebuddy/plans/: 智能LLM路由系统重构_f6e2e789(未完成).md  智能LLM路由系统重构_v2_7f45ab26.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: STRATEGY_ANALYSIS_AGENTS_PLAN.md  STRATEGY_INTELLIGENCE_ARCHITECTURE.md
moneyclaw/: __init__.py  __main__.py  cli.py
moneyclaw/agent/: __init__.py  brain.py  evaluator.py  log_analyzer.py  memory.py  planner.py  strategy_chat.py  strategy_generator.py  strategy_generator_v2.py  strategy_tuner.py  strategy_version.py
moneyclaw/config/: __init__.py  defaults.py  settings.py
moneyclaw/data/: __init__.py  storage.py
moneyclaw/execution/: __init__.py  approval.py  risk.py  trading.py
moneyclaw/interface/: __init__.py
moneyclaw/llm/: __init__.py  budget_manager.py  cache.py  cost_tracker.py  model_discovery.py  model_intelligence.py  model_profile.py  model_registry.py  performance_tracker.py  router.py  smart_router.py  task_analyzer.py  types.py
moneyclaw/plugins/: __init__.py  base.py  loader.py  registry.py
moneyclaw/scheduler/: __init__.py  engine.py  events.py  jobs.py  queue.py
reports/: DAILY_STRATEGY_INTELLIGENCE_TEMPLATE.md  latest-market-health.json  latest-recommendations.json  latest-regimes.json  latest-strategy-intel.json  latest-strategy-intel.md  latest-strategy-runtime-probe.json
scripts/: market_data_health.py  regime_detector.py  strategy_intel_snapshot.py  strategy_recommendations.py  strategy_runtime_probe.py
strategies/appl_trading_strategy/: __init__.py  config.yaml
strategies/crypto_dca/: __init__.py  config.yaml
strategies/crypto_funding/: __init__.py  config.yaml
strategies/crypto_price_alert/: __init__.py  config.yaml
strategies/gold_trading_strategy/: __init__.py  config.yaml
strategies/smart_rebalance/: __init__.py  config.yaml
strategies_live/: combined_strategy_state.json  config.yaml  paper_crypto_strategies.py
(+51 files in other folders)
